# lunar2d

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/lunar-physics/: Cargo.toml
crates/lunar-physics-wasm/: Cargo.toml
crates/lunar-physics-wasm/src/: lib.rs
crates/lunar-physics/src/: collision.rs  entities.rs  gravity.rs  landing.rs  lib.rs  orbit.rs  projectile.rs  rotation.rs  simulation.rs  spatial.rs  terrain.rs  thrust.rs
docs/: 01-game-overview.md  02-core-gameplay.md  03-multiplayer-pvp.md  04-landers-and-progression.md  05-world-design.md  06-hud-and-ui.md  07-technical-architecture.md  08-performance-architecture.md
src/client/: index.html  main.ts
src/client/src/: game.ts
src/client/src/audio/: AudioSystem.ts
src/client/src/camera/: index.ts
src/client/src/controls/: index.ts
src/client/src/domain/: model.ts
src/client/src/network/: MultiplayerClient.ts  index.ts
src/client/src/physics/: flight.ts  terrain.ts
src/client/src/renderer/: index.ts
src/client/src/systems/: engine.ts  objectives.ts
src/client/src/wasm-bridge/: index.ts
src/server/: main.ts
tests/e2e/: smoke.spec.ts
tests/physics/: flight.test.ts  terrain.test.ts
tests/systems/: engine.test.ts  objectives.test.ts
