[package]
name = "lunar-physics-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the Lunar3D physics engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lunar-physics = { path = "../lunar-physics" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
